tests/invalid/bad_with_inst.err_exp
bad_with_inst.m:012: In the `with_inst' annotation of a predicate declaration:
bad_with_inst.m:012:   error: `1234' is not a valid inst.
bad_with_inst.m:014: In the `with_inst' annotation of a function declaration:
bad_with_inst.m:014:   error: `5678' is not a valid inst.
bad_with_inst.m:017: In the `with_inst' annotation of a type class predicate
bad_with_inst.m:017:   method declaration: error: `"Hello"' is not a valid
bad_with_inst.m:017:   inst.
bad_with_inst.m:019: In the `with_inst' annotation of a type class function
bad_with_inst.m:019:   method declaration: error: `"World"' is not a valid
bad_with_inst.m:019:   inst.
